fix: make codebase compatible with java 8